Fist Fixes - arrow z-index. photo fix

--- a/source/style/partials/aboutme/_aboutme-body.scss
+++ b/source/style/partials/aboutme/_aboutme-body.scss
@@ -33,10 +33,10 @@
   height: 390px;
   width: 440px;
   margin-bottom: 20px;
+  overflow: hidden;
 
   & img {
     width: 100%;
-    height: 100%;
   }
 }
 
