--- a/source/style/partials/forms/_form__textarea.scss
+++ b/source/style/partials/forms/_form__textarea.scss
@@ -3,4 +3,5 @@
    font-family: 'robotoregular', Arial, san-serif;
    resize: none;
    width: 340px;
+   border-radius: 25px;
  }
